--- a/Quiz_mkd/Quiz.Web.csproj
+++ b/Quiz_mkd/Quiz.Web.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Quiz.Repository\Quiz.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
