--- a/Quiz_mkd/Quiz.Web.csproj
+++ b/Quiz_mkd/Quiz.Web.csproj
@@ -22,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\Images\event\" />
+    <Folder Include="wwwroot\Images\quiz\" />
     <Folder Include="wwwroot\Uploads\" />
   </ItemGroup>
 
