Finished with Identity now only sending mail is not finished

--- a/Quiz_mkd/appsettings.json
+++ b/Quiz_mkd/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=matejanikolik;Database=QuizDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=matejanikolik;Database=QuizDb_part3;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
