--- a/Quiz.Repository/Quiz.Repository.csproj
+++ b/Quiz.Repository/Quiz.Repository.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Quiz.Domain\Quiz.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
