Added SmtpOptions form mail sending

--- a/Quiz_mkd/appsettings.json
+++ b/Quiz_mkd/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=matejanikolik;Database=QuizDb_part3;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
+  "Smtp": {
+    "Host": "localhost",
+    "Port": 1025
+
   }
 }
