--- a/Quiz_mkd/appsettings.json
+++ b/Quiz_mkd/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=matejanikolik;Database=QuizDb_part3;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=QuizDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
 
   "Smtp": {
     "Host": "localhost",
