--- a/Quiz_mkd/appsettings.json
+++ b/Quiz_mkd/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=QuizDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=matejanikolik;Database=QuizDb_part3;Trusted_Connection=True;TrustServerCertificate=True"
     },
 
   "Smtp": {
