changed mail to send from real mail waiting for nina to set pass and user :)

--- a/Quiz_mkd/appsettings.json
+++ b/Quiz_mkd/appsettings.json
@@ -11,8 +11,11 @@
     },
 
   "Smtp": {
-    "Host": "localhost",
-    "Port": 1025
+    "SmtpServer": "smtp-mail.outlook.com",
+    "SmtpServerPort": 587,
+    "EnableSsl": true,
+    "EmailDisplayName": "Quiz MKD",
+    "SendersName": "Quiz MKD"
 
   }
 }
