--- a/Quiz_mkd/Quiz.Web.csproj
+++ b/Quiz_mkd/Quiz.Web.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>647795d2-cf01-42ba-97a7-05692d50f7ba</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
