event controller fixed bug

--- a/Quiz_mkd/appsettings.json
+++ b/Quiz_mkd/appsettings.json
@@ -6,16 +6,18 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=matejanikolik;Database=QuizDb_part3;Trusted_Connection=True;TrustServerCertificate=True"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=matejanikolik;Database=QuizDb_part3;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+    "Smtp": {
+      "SmtpServer": "smtp-mail.outlook.com",
+      "SmtpServerPort": 587,
+      "EnableSsl": true,
+      "EmailDisplayName": "Quiz MKD",
+      "SendersName": "Quiz MKD",
+      "SmtpUserName": "nina.koceska@students.finki.ukim.mk"
 
-  "Smtp": {
-    "SmtpServer": "smtp-mail.outlook.com",
-    "SmtpServerPort": 587,
-    "EnableSsl": true,
-    "EmailDisplayName": "Quiz MKD",
-    "SendersName": "Quiz MKD"
 
+
+    }
   }
-}
