added changes to views

--- a/Quiz_mkd/appsettings.json
+++ b/Quiz_mkd/appsettings.json
@@ -10,15 +10,26 @@
     "DefaultConnection": "Server=matejanikolik;Database=QuizDb_part3;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
-    "Smtp": {
-        "SmtpServer": "smtp-mail.outlook.com",
-        "SmtpServerPort": 587,
-        "EnableSsl": true,
-        "EmailDisplayName": "Quiz MKD",
-        "SendersName": "Quiz MKD",
-        "SmtpUserName": "nina.koceska@students.finki.ukim.mk"
-        
-
-
+  "Authentication": {
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    },
+    "Facebook": {
+      "AppId": "your-app-id",
+      "AppSecret": "your-app-secret"
     }
+  },
+
+  "Smtp": {
+    "SmtpServer": "smtp-mail.outlook.com",
+    "SmtpServerPort": 587,
+    "EnableSsl": true,
+    "EmailDisplayName": "Quiz MKD",
+    "SendersName": "Quiz MKD",
+    "SmtpUserName": "nina.koceska@students.finki.ukim.mk"
+
+
+
+  }
 }
