--- a/Quiz.Domain/Quiz.Domain.csproj
+++ b/Quiz.Domain/Quiz.Domain.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="8.0.18" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.18" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
