--- a/Quiz.Service/Quiz.Utility.csproj
+++ b/Quiz.Service/Quiz.Utility.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
 	  <PackageReference Include="MailKit" Version="4.10.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="8.0.18" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.18" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
