--- a/Quiz_mkd/Quiz.Web.csproj
+++ b/Quiz_mkd/Quiz.Web.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
 	  <PackageReference Include="ExcelDataReader" Version="3.7.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="8.0.18" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.18" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
