enabled sending email with gmail with my personal email require to change in secrets the email and pass for the official quiz email

--- a/Quiz_mkd/appsettings.json
+++ b/Quiz_mkd/appsettings.json
@@ -11,11 +11,10 @@
   },
 
   "Smtp": {
-    "SmtpServer": "smtp-mail.outlook.com",
+    "SmtpServer": "smtp.gmail.com",
     "SmtpServerPort": 587,
     "EnableSsl": true,
     "EmailDisplayName": "Quiz MKD",
-    "SendersName": "Quiz MKD",
-    "SmtpUserName": "nina.koceska@students.finki.ukim.mk"
+    "SendersName": "Quiz MKD"
   }
 }
